additional hazelcast updates